--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#2c3e50">
   <meta charset="UTF-8" />
   <title>Günlük Takip Programı</title>
 <!-- ⭐ EN İYİ SÜRÜM (STABLE) – Bu sürüm referans alınarak geliştirilecektir -->
