--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@ button:active {
     #dayList { display:grid; grid-template-columns:repeat(auto-fill,minmax(120px,1fr)); gap:8px; margin-top:10px; }
 
     .delete-hold { background:#ffdddd !important; border-color:#ff5c5c !important; color:#a40000; }
-  </style>
-  .weekdays {
+    weekdays {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 6px;
@@ -136,7 +135,8 @@ button:active {
 .weekdays div {
   padding: 6px 0;
   font-size: 0.8rem;
-}
+}.
+  </style>
 </head>
 <body>
 
