--- a/index.html
+++ b/index.html
@@ -135,7 +135,17 @@ button:active {
 .weekdays div {
   padding: 6px 0;
   font-size: 0.8rem;
-}.
+}
+    #weekDays {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 6px;
+  margin-top: 10px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 0.8rem;
+  color: #555;
+}
   </style>
 </head>
 <body>
