--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ for (let i = 0; i < firstDay; i++) {
       currentDate=iso;
       saveDays(days);
       loadDay();
-      day.classList.toggle("completed-day");
+      btn.classList.toggle("completed-day");
 updateGoalStatus();
 
     };
@@ -548,15 +548,16 @@ function handleSwipe() {
   }
   monthInput.value = `${newYear}-${String(newMonth).padStart(2, "0")}`;
   monthInput.dispatchEvent(new Event("change"));
+ 
   function updateGoalStatus() {
   const goal = getGoal();
-  const completedDays = document.querySelectorAll(".completed-day").length;
+  const completedDays =
+    document.querySelectorAll("#monthDays .completed-day").length;
+
   const remaining = goal - completedDays;
 
   document.getElementById("goalRemaining").textContent =
     remaining >= 0 ? remaining : 0;
-    updateGoalStatus();
-}
 }
 </script>
 
