--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@ clearSelectedBtn.onclick = () => {
   loadDay();
   renderMonthDots();
   [...monthDays.children].forEach(b=>b.classList.remove('active'));
+  setTimeout(updateDayCounter, 0);
 };
 
 function loadDay(){
@@ -424,15 +425,16 @@ function updateDayCounter() {
   let done = 0;
   let pending = 0;
 
-  const dots = document.querySelectorAll("#monthDays .day-dot");
-
-  dots.forEach(dot => {
-    if (dot.classList.contains("dot-done")) done++;
-    else if (dot.classList.contains("dot-has")) pending++;
-  });
+  document
+    .querySelectorAll("#monthDays .day-dot")
+    .forEach(dot => {
+      if (dot.classList.contains("dot-done")) done++;
+      else if (dot.classList.contains("dot-has")) pending++;
+    });
 
   doneEl.textContent = done;
   pendingEl.textContent = pending;
+}
 
 }
   document.getElementById("doneCount").textContent = done;
