--- a/index.html
+++ b/index.html
@@ -146,6 +146,39 @@ button:active {
   font-size: 0.8rem;
   color: #555;
 }
+    body.dark {
+  background: #121212;
+  color: #eaeaea;
+}
+
+/* Kartlar / günler */
+body.dark .day,
+body.dark .card {
+  background: #1e1e1e;
+  border-color: #333;
+}
+
+/* Görev input */
+body.dark input,
+body.dark textarea {
+  background: #222;
+  color: #fff;
+  border: 1px solid #444;
+}
+
+/* Takvim renkleri */
+body.dark .dot.done {
+  background: #4caf50;
+}
+
+body.dark .dot.pending {
+  background: #fbc02d;
+}
+
+body.dark .dot.empty {
+  background: #555;
+}
+
   </style>
 </head>
 <body>
@@ -175,6 +208,8 @@ button:active {
   <div>Ct</div>
   <div>Pz</div>
 </div>
+
+  <button id="darkToggle">🌙</button>
 
   <div id="monthDays"></div>
 
@@ -576,6 +611,42 @@ function handleSwipe() {
   monthInput.value = `${newYear}-${String(newMonth).padStart(2, "0")}`;
   monthInput.dispatchEvent(new Event("change"));
 }
+    const darkBtn = document.getElementById("darkToggle");
+const mediaQuery = window.matchMedia("(prefers-color-scheme: dark)");
+
+function applyTheme(mode) {
+  const isDark = mode === "dark";
+  document.body.classList.toggle("dark", isDark);
+  darkBtn.textContent = isDark ? "☀️" : "🌙";
+}
+
+function initTheme() {
+  const saved = localStorage.getItem("theme");
+
+  if (saved === "dark" || saved === "light") {
+    applyTheme(saved);
+  } else {
+    applyTheme(mediaQuery.matches ? "dark" : "light");
+  }
+}
+
+darkBtn.onclick = () => {
+  const isDark = document.body.classList.contains("dark");
+  const newTheme = isDark ? "light" : "dark";
+  localStorage.setItem("theme", newTheme);
+  applyTheme(newTheme);
+};
+
+// Sistem teması değişirse
+mediaQuery.addEventListener("change", e => {
+  if (!localStorage.getItem("theme")) {
+    applyTheme(e.matches ? "dark" : "light");
+  }
+});
+
+// Başlat
+initTheme();
+
 </script>
 
 </body>
