--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ body.dark .dot.empty {
   <label><strong>Ay / Yıl Seç:</strong></label>
   <input type="month" id="monthInput">
   <button id="toggleMulti" style="margin-top:6px;">➕ Birden Fazla Gün Seç</button>
-  <button id="clearSelected" style="margin-top:6px;background:#ffdddd;border:1px solid #ff5c5c;">🧹 Seçilen Günleri Temizle</button>
+  <button id="clearSelected" style="margin-top:6px;background:#ffdddd;border:1px solid #ff5c5c;">🧹 Seçilen Günleri Temizle</button> <button id="darkToggle">🌙</button>
   <div id="dayCounter" style="
   margin-top:10px;
   display:flex;
@@ -208,8 +208,6 @@ body.dark .dot.empty {
   <div>Ct</div>
   <div>Pz</div>
 </div>
-
-  <button id="darkToggle">🌙</button>
 
   <div id="monthDays"></div>
 
